--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <h1 class="display-3 mb-4 text-center">Jeu de Plateau</h1>
 
-  <div id="container" class="text-center"></div>
+  <div id="container"></div>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
