--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
   <div id="container"></div>
 
+  <div id="actions" class="mt-4 text-center">
+    <button id="attackButton" type="button" class="btn btn-danger">Attack</button>
+    <button id="defendButton" type="button" class="btn btn-secondary">Defend</button>
+    <p id="currentPlayer" class="display-4"></p>
+    <p>Points de vie :</p>
+    <p id="playerHealth" class=""></p>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
